Updates and general tidyness.
Former-commit-id: b009841cd2e5a381528a8dae3d6c186862b29c8e [formerly f7c3ef6b31748f9020488c9fc5bcaa17195d58d9]
Former-commit-id: cf74c41071a4d0a2f053cf069617c524ea7664a5

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.suo
 *.psess
 *.vsp
+*.opendb
 *.opensdf
 *.exe
 *.log
@@ -18,3 +19,4 @@ sceneSave.txt
 /Assets/Atlases/*.png
 runsdvui.cmd
 M2tMLibrary.VC.opendb
+M2tMLibrary.VC.db
