--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -317,8 +317,9 @@
     <ClCompile Include="Source\Physics\collider.cpp" />
     <ClCompile Include="Source\Render\boxaabb.cpp" />
     <ClCompile Include="Source\Render\Scene\button.cpp" />
-    <ClCompile Include="Source\Render\Scene\clipped.cpp" />
+    <ClCompile Include="Source\Render\Scene\stencil.cpp" />
     <ClCompile Include="Source\Render\Scene\emitter.cpp" />
+    <ClCompile Include="Source\Render\Scene\clipped.cpp" />
     <ClCompile Include="Source\Render\Scene\grid.cpp" />
     <ClCompile Include="Source\Render\Scene\path.cpp" />
     <ClCompile Include="Source\Render\Scene\node.cpp" />
@@ -496,6 +497,7 @@
     <ClInclude Include="Source\Game\Server\lobbyServer.h" />
     <ClInclude Include="Source\Game\Server\package.h" />
     <ClInclude Include="Source\Game\Server\serverActions.h" />
+    <ClInclude Include="Source\Game\Server\uiManager.h" />
     <ClInclude Include="Source\Game\state.h" />
     <ClInclude Include="Source\Game\wallet.h" />
     <ClInclude Include="Source\Network\download.h" />
@@ -505,6 +507,7 @@
     <ClInclude Include="Source\Physics\package.h" />
     <ClInclude Include="Source\Render\boxaabb.h" />
     <ClInclude Include="Source\Render\Scene\emitter.h" />
+    <ClInclude Include="Source\Render\Scene\clipped.h" />
     <ClInclude Include="Source\Render\Scene\grid.h" />
     <ClInclude Include="Source\Render\Scene\drawable.h" />
     <ClInclude Include="Source\Render\Scene\button.h" />
@@ -518,7 +521,7 @@
     <ClInclude Include="Source\Interface\package.h" />
     <ClInclude Include="Source\Network\network.h" />
     <ClInclude Include="Source\Network\package.h" />
-    <ClInclude Include="Source\Render\Scene\clipped.h" />
+    <ClInclude Include="Source\Render\Scene\stencil.h" />
     <ClInclude Include="Source\Render\Scene\path.h" />
     <ClInclude Include="Source\Render\Scene\package.h" />
     <ClInclude Include="Source\Render\Scene\node.h" />
