--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -275,15 +275,20 @@
     <ClCompile Include="..\external\spine\IkConstraintData.c" />
     <ClCompile Include="..\external\spine\Json.c" />
     <ClCompile Include="..\external\spine\MeshAttachment.c" />
+    <ClCompile Include="..\external\spine\PathAttachment.c" />
+    <ClCompile Include="..\external\spine\PathConstraint.c" />
+    <ClCompile Include="..\external\spine\PathConstraintData.c" />
     <ClCompile Include="..\external\spine\RegionAttachment.c" />
     <ClCompile Include="..\external\spine\Skeleton.c" />
     <ClCompile Include="..\external\spine\SkeletonBounds.c" />
     <ClCompile Include="..\external\spine\SkeletonData.c" />
     <ClCompile Include="..\external\spine\SkeletonJson.c" />
     <ClCompile Include="..\external\spine\Skin.c" />
-    <ClCompile Include="..\external\spine\SkinnedMeshAttachment.c" />
     <ClCompile Include="..\external\spine\Slot.c" />
     <ClCompile Include="..\external\spine\SlotData.c" />
+    <ClCompile Include="..\external\spine\TransformConstraint.c" />
+    <ClCompile Include="..\external\spine\TransformConstraintData.c" />
+    <ClCompile Include="..\external\spine\VertexAttachment.c" />
     <ClCompile Include="Source\ArtificialIntelligence\pathfinding.cpp" />
     <ClCompile Include="Source\ClickerGame\clickerGame.cpp" />
     <ClCompile Include="Source\DiggerGame\diggerGame.cpp" />
@@ -464,16 +469,21 @@
     <ClInclude Include="..\external\spine\IkConstraintData.h" />
     <ClInclude Include="..\external\spine\Json.h" />
     <ClInclude Include="..\external\spine\MeshAttachment.h" />
+    <ClInclude Include="..\external\spine\PathAttachment.h" />
+    <ClInclude Include="..\external\spine\PathConstraint.h" />
+    <ClInclude Include="..\external\spine\PathConstraintData.h" />
     <ClInclude Include="..\external\spine\RegionAttachment.h" />
     <ClInclude Include="..\external\spine\Skeleton.h" />
     <ClInclude Include="..\external\spine\SkeletonBounds.h" />
     <ClInclude Include="..\external\spine\SkeletonData.h" />
     <ClInclude Include="..\external\spine\SkeletonJson.h" />
     <ClInclude Include="..\external\spine\Skin.h" />
-    <ClInclude Include="..\external\spine\SkinnedMeshAttachment.h" />
     <ClInclude Include="..\external\spine\Slot.h" />
     <ClInclude Include="..\external\spine\SlotData.h" />
     <ClInclude Include="..\external\spine\spine.h" />
+    <ClInclude Include="..\external\spine\TransformConstraint.h" />
+    <ClInclude Include="..\external\spine\TransformConstraintData.h" />
+    <ClInclude Include="..\external\spine\VertexAttachment.h" />
     <ClInclude Include="Source\ArtificialIntelligence\pathfinding.h" />
     <ClInclude Include="Source\ClickerGame\clickerGame.h" />
     <ClInclude Include="Source\DiggerGame\diggerGame.h" />
@@ -557,6 +567,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\external\cereal\include\cereal\external\rapidxml\manual.html" />
+    <None Include="..\external\spine\LICENSE" />
+    <None Include="..\external\spine\README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\external\spine\CMakeLists.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
