--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -341,84 +341,6 @@
     <ClCompile Include="Source\Game\wallet.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
-    <ClCompile Include="..\external\spine\Animation.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\AnimationState.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\AnimationStateData.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\Atlas.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\AtlasAttachmentLoader.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\Attachment.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\AttachmentLoader.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\Bone.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\BoneData.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\BoundingBoxAttachment.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\Event.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\EventData.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\extension.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\IkConstraint.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\IkConstraintData.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\Json.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\MeshAttachment.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\RegionAttachment.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\Skeleton.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\SkeletonBounds.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\SkeletonData.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\SkeletonJson.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\Skin.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\SkinnedMeshAttachment.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\Slot.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\spine\SlotData.c">
-      <Filter>Spine</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Game\state.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
@@ -538,6 +460,99 @@
     </ClCompile>
     <ClCompile Include="Source\Render\Scene\clipped.cpp">
       <Filter>Source Files\Render\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\TransformConstraint.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\TransformConstraintData.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\VertexAttachment.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\Animation.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\AnimationState.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\AnimationStateData.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\Atlas.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\AtlasAttachmentLoader.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\Attachment.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\AttachmentLoader.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\Bone.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\BoneData.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\BoundingBoxAttachment.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\Event.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\EventData.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\extension.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\IkConstraint.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\IkConstraintData.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\Json.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\MeshAttachment.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\PathAttachment.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\PathConstraint.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\PathConstraintData.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\RegionAttachment.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\Skeleton.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\SkeletonBounds.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\SkeletonData.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\SkeletonJson.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\Skin.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\Slot.c">
+      <Filter>Spine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\spine\SlotData.c">
+      <Filter>Spine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1027,87 +1042,6 @@
     <ClInclude Include="Source\Game\managers.h">
       <Filter>Source Files\Game</Filter>
     </ClInclude>
-    <ClInclude Include="..\external\spine\Animation.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\AnimationState.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\AnimationStateData.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\Atlas.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\AtlasAttachmentLoader.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\Attachment.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\AttachmentLoader.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\Bone.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\BoneData.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\BoundingBoxAttachment.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\Event.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\EventData.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\extension.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\IkConstraint.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\IkConstraintData.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\Json.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\MeshAttachment.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\RegionAttachment.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\Skeleton.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\SkeletonBounds.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\SkeletonData.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\SkeletonJson.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\Skin.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\SkinnedMeshAttachment.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\Slot.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\SlotData.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\spine\spine.h">
-      <Filter>Spine</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Game\state.h">
       <Filter>Source Files\Game</Filter>
     </ClInclude>
@@ -1165,10 +1099,117 @@
     <ClInclude Include="Source\Render\Scene\clipped.h">
       <Filter>Source Files\Render\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="..\external\spine\TransformConstraint.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\TransformConstraintData.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\VertexAttachment.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\Animation.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\AnimationState.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\AnimationStateData.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\Atlas.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\AtlasAttachmentLoader.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\Attachment.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\AttachmentLoader.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\Bone.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\BoneData.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\BoundingBoxAttachment.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\Event.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\EventData.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\extension.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\IkConstraint.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\IkConstraintData.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\Json.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\MeshAttachment.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\PathAttachment.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\PathConstraint.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\PathConstraintData.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\RegionAttachment.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\Skeleton.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\SkeletonBounds.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\SkeletonData.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\SkeletonJson.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\Skin.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\Slot.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\SlotData.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\spine\spine.h">
+      <Filter>Spine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\external\cereal\include\cereal\external\rapidxml\manual.html">
       <Filter>Cereal</Filter>
     </None>
+    <None Include="..\external\spine\LICENSE">
+      <Filter>Spine</Filter>
+    </None>
+    <None Include="..\external\spine\README.md">
+      <Filter>Spine</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\external\spine\CMakeLists.txt">
+      <Filter>Spine</Filter>
+    </Text>
   </ItemGroup>
 </Project>
