--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -1202,6 +1202,9 @@
     <ClInclude Include="Source\Render\Scene\component.h">
       <Filter>Source Files\Render\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Editor\anchorEditor.h">
+      <Filter>Source Files\Editor</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\external\cereal\include\cereal\external\rapidxml\manual.html">
@@ -1213,6 +1216,7 @@
     <None Include="..\external\spine\README.md">
       <Filter>Spine</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\external\spine\CMakeLists.txt">
