UTF-8 completely integrated (moved away from UTF-16). Editor refactor. Lots of text improvements.
Former-commit-id: 7c913c1276bfa2748892926eb6295ed475ac9664 [formerly da1cbbc6bfd1fc4be3f826a77d1b2346ceb8e94d]
Former-commit-id: 5f6994ff76e78e96a925868f4b2e31861a7f9346

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -351,6 +351,7 @@
     <ClCompile Include="Source\Utility\sha512.cpp" />
     <ClCompile Include="Source\Utility\stopwatch.cpp" />
     <ClCompile Include="Source\Utility\threadPool.cpp" />
+    <ClCompile Include="Source\Utility\tinyutf8.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\external\Box2D\Box2D.h" />
@@ -567,6 +568,7 @@
     <ClInclude Include="Source\Utility\stopwatch.h" />
     <ClInclude Include="Source\Utility\task.hpp" />
     <ClInclude Include="Source\Utility\threadPool.h" />
+    <ClInclude Include="Source\Utility\tinyutf8.h" />
     <ClInclude Include="Source\Utility\visitor.hpp" />
   </ItemGroup>
   <ItemGroup>
