--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -8,9 +8,6 @@
     <Filter Include="Source Files">
       <UniqueIdentifier>{47fa3cd1-5957-4db5-94db-0723f41d2100}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Animation">
-      <UniqueIdentifier>{ea5b42cf-bf9d-4ca2-a95a-eaf9e236e193}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Audio">
       <UniqueIdentifier>{1c2ab69a-5a84-405e-9c1f-d558930e76da}</UniqueIdentifier>
     </Filter>
@@ -44,9 +41,6 @@
     <Filter Include="Source Files\ArtificialIntelligence">
       <UniqueIdentifier>{1b46ac1c-2017-43d3-9a9a-6cf1bbd1b432}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\ClickerGame">
-      <UniqueIdentifier>{f873b108-74e4-4e3a-9e5e-0a0be7c1fe23}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Exprtk">
       <UniqueIdentifier>{d16dd761-bb15-4a4b-9f6e-ae35af09da85}</UniqueIdentifier>
     </Filter>
@@ -73,9 +67,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Animation\frameSwapper.cpp">
-      <Filter>Source Files\Animation</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Audio\sound.cpp">
       <Filter>Source Files\Audio</Filter>
     </ClCompile>
@@ -102,9 +93,6 @@
     </ClCompile>
     <ClCompile Include="Source\Network\network.cpp">
       <Filter>Source Files\Network</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\exampleCode.cpp">
-      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\Interface\mouse.cpp">
       <Filter>Source Files\Interface</Filter>
@@ -176,9 +164,6 @@
     <ClCompile Include="Source\ArtificialIntelligence\pathfinding.cpp">
       <Filter>Source Files\ArtificialIntelligence</Filter>
     </ClCompile>
-    <ClCompile Include="Source\ClickerGame\clickerGame.cpp">
-      <Filter>Source Files\ClickerGame</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Editor\editComponents.cpp">
       <Filter>Source Files\Editor</Filter>
     </ClCompile>
@@ -187,9 +172,6 @@
     </ClCompile>
     <ClCompile Include="Source\Render\Scene\palette.cpp">
       <Filter>Source Files\Render\Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Utility\expression.cpp">
-      <Filter>Source Files\Utility</Filter>
     </ClCompile>
     <ClCompile Include="Source\Render\Scene\path.cpp">
       <Filter>Source Files\Render\Scene</Filter>
@@ -557,18 +539,14 @@
     <ClCompile Include="Source\Render\Scene\component.cpp">
       <Filter>Source Files\Render\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Game\gameEditor.cpp" />
     <ClCompile Include="Source\Utility\tinyutf8.cpp">
       <Filter>Source Files\Utility</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Game\gameEditor.cpp">
+      <Filter>Source Files\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\Animation\frameSwapper.h">
-      <Filter>Source Files\Animation</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Animation\package.h">
-      <Filter>Source Files\Animation</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Audio\package.h">
       <Filter>Source Files\Audio</Filter>
     </ClInclude>
@@ -607,9 +585,6 @@
     </ClInclude>
     <ClInclude Include="Source\Utility\signal.hpp">
       <Filter>Source Files\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\exampleCode.h">
-      <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Interface\package.h">
       <Filter>Source Files\Interface</Filter>
@@ -701,9 +676,6 @@
     <ClInclude Include="Source\Game\gameEditor.h">
       <Filter>Source Files\Game</Filter>
     </ClInclude>
-    <ClInclude Include="Source\ClickerGame\clickerGame.h">
-      <Filter>Source Files\ClickerGame</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Editor\editComponents.h">
       <Filter>Source Files\Editor</Filter>
     </ClInclude>
@@ -721,9 +693,6 @@
     </ClInclude>
     <ClInclude Include="..\external\exprtk\exprtk.hpp">
       <Filter>Exprtk</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\expression.h">
-      <Filter>Source Files\Utility</Filter>
     </ClInclude>
     <ClInclude Include="Source\Render\Scene\path.h">
       <Filter>Source Files\Render\Scene</Filter>
@@ -1209,6 +1178,9 @@
       <Filter>Source Files\Editor</Filter>
     </ClInclude>
     <ClInclude Include="Source\Utility\tinyutf8.h">
+      <Filter>Source Files\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Utility\tupleHelpers.hpp">
       <Filter>Source Files\Utility</Filter>
     </ClInclude>
   </ItemGroup>
