Adding a ton of new support for UI editing.
Former-commit-id: c82a16b4213a695f9f2ee9e136f150c1285993b6 [formerly f6313c052f0d803e5847c4bd01679dc5b512c52e]
Former-commit-id: 878f5f5d716b9a198df68886a8da3ddf9bdbb2a3

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -323,6 +323,7 @@
     <ClCompile Include="Source\Render\boxaabb.cpp" />
     <ClCompile Include="Source\Render\Scene\button.cpp" />
     <ClCompile Include="Source\Render\Scene\component.cpp" />
+    <ClCompile Include="Source\Render\Scene\scroller.cpp" />
     <ClCompile Include="Source\Render\Scene\stencil.cpp" />
     <ClCompile Include="Source\Render\Scene\emitter.cpp" />
     <ClCompile Include="Source\Render\Scene\clipped.cpp" />
@@ -530,6 +531,7 @@
     <ClInclude Include="Source\Interface\package.h" />
     <ClInclude Include="Source\Network\network.h" />
     <ClInclude Include="Source\Network\package.h" />
+    <ClInclude Include="Source\Render\Scene\scroller.h" />
     <ClInclude Include="Source\Render\Scene\stencil.h" />
     <ClInclude Include="Source\Render\Scene\path.h" />
     <ClInclude Include="Source\Render\Scene\package.h" />
