Networking stuff! Lots of it.

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -307,9 +307,10 @@
     <ClCompile Include="Source\Game\Instance\gameInstance.cpp" />
     <ClCompile Include="Source\Game\Interface\guiFactories.cpp" />
     <ClCompile Include="Source\Game\Interface\interfaceManager.cpp" />
+    <ClCompile Include="Source\Game\NetworkLayer\accountActions.cpp" />
+    <ClCompile Include="Source\Game\NetworkLayer\clientActions.cpp" />
+    <ClCompile Include="Source\Game\NetworkLayer\lobbyServer.cpp" />
     <ClCompile Include="Source\Game\player.cpp" />
-    <ClCompile Include="Source\Game\Server\accountActions.cpp" />
-    <ClCompile Include="Source\Game\Server\lobbyServer.cpp" />
     <ClCompile Include="Source\Game\state.cpp" />
     <ClCompile Include="Source\Game\wallet.cpp" />
     <ClCompile Include="Source\Interface\mouse.cpp" />
@@ -454,6 +455,43 @@
     <ClInclude Include="..\external\cereal\include\cereal\types\utility.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\types\valarray.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\types\vector.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\chaiscript.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\chaiscript_defines.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\chaiscript_stdlib.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\chaiscript_threading.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\any.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\bad_boxed_cast.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\bind_first.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\bootstrap.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\bootstrap_stl.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\boxed_cast.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\boxed_cast_helper.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\boxed_number.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\boxed_value.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\callable_traits.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\dispatchkit.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\dynamic_object.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\dynamic_object_detail.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\exception_specification.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\function_call.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\function_call_detail.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\handle_return.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\operators.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\proxy_constructors.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\proxy_functions.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\proxy_functions_detail.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\register_function.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\type_conversions.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\dispatchkit\type_info.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\language\chaiscript_algebraic.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\language\chaiscript_common.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\language\chaiscript_engine.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\language\chaiscript_eval.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\language\chaiscript_parser.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\language\chaiscript_prelude_docs.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\utility\json.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\utility\json_wrap.hpp" />
+    <ClInclude Include="..\external\ChaiScript-5.8.1\include\chaiscript\utility\utility.hpp" />
     <ClInclude Include="..\external\exprtk\exprtk.hpp" />
     <ClInclude Include="..\external\spine\Animation.h" />
     <ClInclude Include="..\external\spine\AnimationState.h" />
@@ -505,12 +543,12 @@
     <ClInclude Include="Source\Game\Interface\guiFactories.h" />
     <ClInclude Include="Source\Game\Interface\interfaceManager.h" />
     <ClInclude Include="Source\Game\managers.h" />
+    <ClInclude Include="Source\Game\NetworkLayer\accountActions.h" />
+    <ClInclude Include="Source\Game\NetworkLayer\clientActions.h" />
+    <ClInclude Include="Source\Game\NetworkLayer\lobbyServer.h" />
+    <ClInclude Include="Source\Game\NetworkLayer\package.h" />
+    <ClInclude Include="Source\Game\NetworkLayer\serverActions.h" />
     <ClInclude Include="Source\Game\player.h" />
-    <ClInclude Include="Source\Game\Server\accountActions.h" />
-    <ClInclude Include="Source\Game\Server\clientActions.h" />
-    <ClInclude Include="Source\Game\Server\lobbyServer.h" />
-    <ClInclude Include="Source\Game\Server\package.h" />
-    <ClInclude Include="Source\Game\Server\serverActions.h" />
     <ClInclude Include="Source\Game\state.h" />
     <ClInclude Include="Source\Game\wallet.h" />
     <ClInclude Include="Source\Network\download.h" />
