--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ M2tMLibrary.VC.db
 .vs/M2tMLibrary/v15/Solution.VC.db
 .vs/M2tMLibrary/v15/Solution.VC.db-shm
 .vs/M2tMLibrary/v15/Solution.VC.db-wal
+*.db
+*.db-wal
+*.db-shm
